--- a/src/config.yaml
+++ b/src/config.yaml
@@ -7,18 +7,19 @@ chunk_size: 256
 enable_controller: True
 lmcache_instance_id: "lmcache_instance"
 
+
 # ------------------------------
 # Tier 1: Local CPU RAM backend
 # ------------------------------
-local_cpu: True
+local_cpu: FALSE
 max_local_cpu_size: 5  # in GB
 
 # ------------------------------
 # Tier 2: Local disk backend
 # ------------------------------
 local_disk:
-  enable: True
-  root_dir: "/tmp/lmcache_disk"   # path to store serialized KV blocks
+  enable: TRUE
+  root_dir: "/content/lmcache_warm"   # path to store serialized KV blocks
   max_disk_size_gb: 50
   eviction_policy: "lru"
 
@@ -26,7 +27,7 @@ local_disk:
 # Tier 3: Remote (Fake Redis) backend
 # ------------------------------
 remote_storage:
-  enable: True
+  enable: FALSE
   type: "redis"
   redis_host: "localhost"
   redis_port: 6379
